# discO

./: .galpyrc  .gitignore  .mailmap  .pre-commit-config.yaml  .readthedocs.yaml  .travis.yml  CHANGES.rst  LICENSE.rst  MANIFEST.in  README.rst  SS_deviation.nb  healpix_gaia_query.ipynb  pyproject.toml  setup.cfg  setup.py  tox.ini
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci_cron.yml  ci_tests.yml  codeql-analysis-2.yml  codeql-analysis.yml
discO/: __init__.py  _astropy_init.py  common.py  config.py  conftest.py  discO.cfg  setup_package.py  statistic.py  type_hints.py
discO/core/: __init__.py  common.py  core.py  fitter.py  measurement.py  pipeline.py  residual.py  sample.py  sampler.py  statistic.py  wrapper.py
discO/core/tests/: __init__.py  test_common.py  test_core.py  test_fitter.py  test_measurement.py  test_pipeline.py  test_residual.py  test_sample.py  test_statistic.py  test_wrapper.py
discO/data/: .gitignore  __init__.py
discO/data/err_field/: __init__.py  script.py  sky_distribution.py  utils.py
discO/data/tests/: __init__.py  test_sim_CC_100.py
discO/plugin/: __init__.py
discO/plugin/agama/: __init__.py  fitter.py  sample.py  type_hints.py  wrapper.py
discO/plugin/agama/tests/: __init__.py  test_fitter.py  test_sample.py  test_type_hints.py  test_wrapper.py
discO/plugin/gala/: __init__.py  type_hints.py  wrapper.py
discO/plugin/gala/tests/: __init__.py  test_type_hints.py  test_wrapper.py
discO/plugin/galpy/: __init__.py  fitter.py  sample.py  test_residual.py  type_hints.py  wrapper.py
discO/plugin/galpy/potentials/: __init__.py  self_consistent_field.py
discO/plugin/galpy/tests/: __init__.py  test_fitter.py  test_residual.py  test_sample.py  test_type_hints.py  test_wrapper.py
discO/tests/: __init__.py  test_common.py  test_config.py  test_init.py  test_statistic.py  test_type_hints.py
discO/tests/helper/: __init__.py  conf_tests.py  objecttest.py  typevar_tests.py
discO/utils/: __init__.py  _framelike.py  coordinates.py  decorators.py  pbar.py  pynbody.py  random.py  vectorfield.py
discO/utils/tests/: __init__.py  test_coordinates.py  test_pbar.py  test_random.py  test_resolve_framelike.py  test_vectorfield.py
disc_expand/tests/: __init__.py  test_init.py
disk_expand/: __init__.py
disk_expand/tests/: __init__.py  test_init.py
docs/: .gitignore  conf.py  credits.rst  glossary.rst  index.rst
docs/discO/: index.rst  sampling.rst  utils.rst
docs/disk_expand/: index.rst
docs/documentation/: code_quality.rst  installation.rst  testing.rst
docs/examples/: Coefficient_correlations.ipynb  analyis.ipynb  sampling.ipynb  wrapping_potentials.ipynb
docs/papers_and_presentations/: README.md
docs/whatsnew/: 1.0.rst  index.rst
notebooks/: correlations.ipynb  spiral_derivation.nb
notebooks/error_field/: healpix_gaia_query.ipynb
