[build-system]
requires = [ "setuptools", "setuptools_scm", "extension_helpers", "wheel",]
build-backend = "setuptools.build_meta"

[tool.isort]
line_length = 100
multi_line_output = 3
include_trailing_comma = "True"
force_grid_wrap = 0
use_parentheses = "True"
ensure_newline_before_comments = "True"
sections = [ "FUTURE", "STDLIB", "THIRDPARTY", "FIRSTPARTY", "LOCALFOLDER",]
known_third_party = ["agama", "astropy", "erfa", "extension_helpers", "gala", "galpy", "numpy", "pytest", "scipy", "setuptools", "typing_extensions"]
known_firstparty = [ "astronat", "utilipy",]
known_localfolder = "discO"
import_heading_stdlib = "STDLIB"
import_heading_thirdparty = "THIRD PARTY"
import_heading_firstparty = "FIRST PARTY"
import_heading_localfolder = "LOCAL"

[tool.black]
line-length = 100
include = "\\.pyi?$"
exclude = "/(\n    \\.git\n  | \\.hg\n  | \\.mypy_cache\n  | \\.tox\n  | \\.venv\n  | _build\n  | buck-out\n  | build\n  | dist\n)/\n"
