[metadata]
name = disk_expand
author = Nathaniel Starkman, Christopher Carr
author_email = n.starkman@mail.utoronto.ca
license = BSD 3-Clause
license_file = licenses/LICENSE.rst
url = http://docs.astropy.org/projects/package-template/
description = Investigating Orthogonal Expansions of the Disk
long_description = file: README.rst
long_description_content_type = text/x-rst
edit_on_github = False
github_project = nstarman/disk_expand

[options]
zip_safe = False
packages = find:
python_requires = >=3.7
setup_requires = setuptools_scm
install_requires =
    astropy
    galpy


[options.extras_require]
all =
    utilipy
test =
    pytest-astropy
docs =
    sphinx-astropy
    nbsphinx
    jupyter_client

[options.package_data]
disk_expand = data/*

[tool:pytest]
testpaths = "disk_expand" "docs"
astropy_header = true
doctest_plus = enabled
text_file_format = rst
doctest_norecursedirs=*/disk_expand/extern/*
addopts = --doctest-rst

[coverage:run]
omit =
    disk_expand/_astropy_init*
    disk_expand/conftest.py
    disk_expand/*setup_package*
    disk_expand/tests/*
    disk_expand/*/tests/*
    disk_expand/extern/*
    disk_expand/version*
    */disk_expand/_astropy_init*
    */disk_expand/conftest.py
    */disk_expand/*setup_package*
    */disk_expand/tests/*
    */disk_expand/*/tests/*
    */disk_expand/extern/*
    */disk_expand/version*

[coverage:report]
exclude_lines =
    # Have to re-enable the standard pragma
    pragma: no cover
    # Don't complain about packages we have installed
    except ImportError
    # Don't complain if tests don't hit assertions
    raise AssertionError
    raise NotImplementedError
    # Don't complain about script hooks
    def main\(.*\):
    # Ignore branches that don't pertain to this version of Python
    pragma: py{ignore_python_version}
    # Don't complain about IPython completion helper
    def _ipython_key_completions_
