[metadata]
name = discO
author = Nathaniel Starkman, Christopher Carr
author_email = n.starkman@mail.utoronto.ca
license = BSD 3-Clause
license_file = licenses/LICENSE.rst
url = http://docs.astropy.org/projects/package-template/
description = Investigating Orthogonal Expansions of the Disk
long_description = file: README.rst
long_description_content_type = text/x-rst
edit_on_github = False
github_project = nstarman/discO

[options]
zip_safe = False
packages = find:
python_requires = >=3.7
setup_requires = setuptools_scm
install_requires =
    astropy
    numpy
    PyYAML
    typing_extensions

[options.extras_require]
all =
    galpy
    agama == 1.0
test =
    pytest-astropy
docs =
    sphinx-astropy
    nbsphinx
    jupyter_client

[options.package_data]
discO = data/*

[tool:pytest]
testpaths = "discO" "docs"
astropy_header = true
doctest_plus = enabled
text_file_format = rst
doctest_norecursedirs=*/discO/extern/*
addopts = --doctest-rst

[coverage:run]
omit =
    discO/_astropy_init*
    discO/conftest.py
    discO/*setup_package*
    discO/tests/*
    discO/*/tests/*
    discO/extern/*
    discO/version*
    */discO/_astropy_init*
    */discO/conftest.py
    */discO/*setup_package*
    */discO/tests/*
    */discO/*/tests/*
    */discO/extern/*
    */discO/version*

[coverage:report]
exclude_lines =
    # Have to re-enable the standard pragma
    pragma: no cover
    # Don't complain about packages we have installed
    except ImportError
    # Don't complain if tests don't hit assertions
    raise AssertionError
    raise NotImplementedError
    # Don't complain about script hooks
    def main\(.*\):
    # Ignore branches that don't pertain to this version of Python
    pragma: py{ignore_python_version}
    # Don't complain about IPython completion helper
    def _ipython_key_completions_

[flake8]
max-line-length = 100
exclude =
    # The conf file is mostly autogenerated, ignore it
    ./docs/conf.py
